changed given-one-chord size on smallest viewport, small bug due to set margins/padding where it ended up a different size than other chord buttons

--- a/src/index.css
+++ b/src/index.css
@@ -238,6 +238,10 @@ button {
     font-size: 8px;
   }
 
+  #given-one-chord {
+    width: 36px;
+  }
+
   .chord-button {
     width: 46px;
   }
